--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "polymer": "Polymer/polymer#^1.7.0",
     "neon-animation": "^1.2.4",
-    "iron-a11y-keys": "^1.0.6"
+    "iron-a11y-keys": "^1.0.6",
+    "polymerfire": "^0.10.3"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
